--- a/StocksTradingApp/PortfolioService/PortfolioService.Application/PortfolioService.Application.csproj
+++ b/StocksTradingApp/PortfolioService/PortfolioService.Application/PortfolioService.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PortfolioService.Domain\PortfolioService.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
